force-app/main/default/objects/Vehicle__c/Vehicle__c.object-meta.xml
<CustomObject>
    <description>Basic vehicle type</description>
    <label>Vehicle</label>
    <nameField>
        <displayFormat>ID#{000000}</displayFormat>
        <label>Vehicle ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>