force-app/main/default/objects/Vehicle__c/fields/Vehicle_Approval_Triger__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Approval_Triger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ON approval set true, and trigger flow</description>
    <label>Vehicle Approval Triger</label>
    <type>Checkbox</type>
</CustomField>