force-app/main/default/objects/Vehicle__c/fields/Vehicle_current_millage__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_current_millage__c</fullName>
    <inlineHelpText>Vehicle current millage</inlineHelpText>
    <label>Vehicle current millage</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>