force-app/main/default/objects/Vehicle__c/fields/Vehicle_driver__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup for the contact of vehicle driver</description>
    <inlineHelpText>Vehicle driver conatct</inlineHelpText>
    <label>Vehicle driver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vehicle</relationshipLabel>
    <relationshipName>Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>