force-app/main/default/objects/Vehicle__c/fields/Vehicle_driver_contact_phone_reader__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_driver_contact_phone_reader__c</fullName>
    <formula>IF(NOT ISBLANK( Vehicle_driver__r.Phone) ,  Vehicle_driver__r.Phone,
    IF(NOT ISBLANK( Vehicle_driver__r.MobilePhone ) ,  Vehicle_driver__r.MobilePhone,
        IF(NOT ISBLANK( Vehicle_driver__r.OtherPhone ) ,  Vehicle_driver__r.OtherPhone, 
            IF(NOT ISBLANK( Vehicle_driver__r.AssistantPhone ) ,  Vehicle_driver__r.AssistantPhone, 
                IF(NOT ISBLANK( Vehicle_driver__r.HomePhone ) ,  Vehicle_driver__r.HomePhone,&quot;no contact phone&quot;)
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle driver contact phone</label>
    <type>Text</type>
</CustomField>