force-app/main/default/objects/Vehicle__c/fields/Vehicle_Last_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Last_Maintenance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Last Maintenance</label>
    <referenceTo>Maintenance__c</referenceTo>
    <relationshipLabel>Vehicle</relationshipLabel>
    <relationshipName>Vehicle_Last_Maintenance</relationshipName>
    <type>Lookup</type>
</CustomField>