force-app/main/default/objects/Vehicle__c/fields/Vehicle_Last_Maintenance_Date__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Last_Maintenance_Date__c</fullName>
    <description>Vehicle Last Maintenance Date</description>
    <inlineHelpText>Last date of vehicle maintenance</inlineHelpText>
    <label>Vehicle Last Maintenance Date</label>
    <type>Date</type>
</CustomField>