force-app/main/default/objects/Vehicle__c/fields/Vehicle_Manager__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Manager__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehicle Manager</label>
    <referenceTo>Vehicle_Manager__c</referenceTo>
    <relationshipLabel>Vehicle</relationshipLabel>
    <relationshipName>Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>