force-app/main/default/objects/Vehicle__c/fields/Vehicle_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Manufacturer__c</fullName>
    <label>Vehicle Manufacturer</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>