force-app/main/default/objects/Vehicle__c/fields/Vehicle_model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_model__c</fullName>
    <label>Vehicle model</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>