force-app/main/default/objects/Vehicle__c/fields/Vehicle_model_description__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_model_description__c</fullName>
    <formula>Vehicle_Manufacturer__c &amp; &quot;:   &quot; &amp; Vehicle_model__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle model description</label>
    <type>Text</type>
</CustomField>