force-app/main/default/objects/Vehicle__c/fields/Vehicle_Next_Maintenance_Date__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Next_Maintenance_Date__c</fullName>
    <description>Vehicle Next Maintenance Date</description>
    <inlineHelpText>Next sheduled date of vehicle maintenance</inlineHelpText>
    <label>Vehicle Next Maintenance Date</label>
    <type>Date</type>
</CustomField>