force-app/main/default/objects/Vehicle__c/fields/Vehicle_plate_number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_plate_number__c</fullName>
    <description>replace with vehicle number object</description>
    <label>Vehicle plate number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>