force-app/main/default/objects/Vehicle__c/fields/Vehicle_Weight__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Weight__c</fullName>
    <description>Available truck transport weight in tons</description>
    <inlineHelpText>Available truck transport weight in tons, requared for truck</inlineHelpText>
    <label>Vehicle Weight</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>