force-app/main/default/objects/Vehicle__c/fields/Vehicle_year__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_year__c</fullName>
    <description>year of car manufacture</description>
    <inlineHelpText>year of car manufacture</inlineHelpText>
    <label>Vehicle year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>