force-app/main/default/objects/Vehicle__c/fields/vehivle_alive__c.field-meta.xml
<CustomField>
    <fullName>vehivle_alive__c</fullName>
    <label>vehivle alive</label>
    <length>128</length>
    <type>Text</type>
</CustomField>