force-app/main/default/objects/Vehicle__c/validationRules/Next_date_hightrer_than_last.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_date_hightrer_than_last</fullName>
    <active>false</active>
    <errorConditionFormula>Vehicle_Last_Maintenance_Date__c &gt; Vehicle_Next_Maintenance_Date__c</errorConditionFormula>
    <errorDisplayField>Vehicle_Next_Maintenance_Date__c</errorDisplayField>
    <errorMessage>Next maintenance date must be hightrer than last maintenance date</errorMessage>
</ValidationRule>