force-app/main/default/objects/Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vehicle_model_description__c</columns>
    <columns>Vehicle_year__c</columns>
    <columns>Vehicle_plate_number__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Vehicle_current_millage__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>