force-app/main/default/objects/Vehicle__c/listViews/Service_operator_groupe_for_approval_pro_Vehicle.listView-meta.xml
<ListView>
    <fullName>Service_operator_groupe_for_approval_pro_Vehicle</fullName>
    <filterScope>Queue</filterScope>
    <label>Service operator groupe for approval pro</label>
    <queue>Service_operator_groupe_for_approval_pro</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>